--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -10,3 +10,10 @@
     padding: 5px;
     padding-left: 10px;
 }
+
+.messages {
+    margin: 10px;
+    padding: 10px;
+    padding-left: 20px;
+    border-left: 1px solid lightgray;
+}
