--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -2,17 +2,17 @@
     display: grid;
     grid-template-columns: 2fr 10fr;
     background-color: white;
-    min-height: 50%;
+    min-height: calc(100vh - 150px);
     box-shadow: 0 1px 10px 0 rgba(51, 51, 51, 0.2);
 }
 
 .dialogItems {
     padding: 5px;
     padding-left: 10px;
+    min-width: 150px;
 }
 
 .messages {
-    margin: 10px;
     padding: 10px;
     padding-left: 20px;
     border-left: 1px solid lightgray;
