--- a/src/components/Dialogs/Message/Message.module.css
+++ b/src/components/Dialogs/Message/Message.module.css
@@ -1,5 +1,21 @@
+.message {
+    display: flex;
+}
 
-.messages .message {
-    padding: 5px;
-    padding-left: 10px;
+.messageAuthor {
+    display: flex;
+    flex-direction: column;
+}
+
+.messageText {
+    display: flex;
+    align-items: center;
+    width: 90%;
+    margin: 5px;
+    padding-left: 20px;
+    background-color: ghostwhite;
+}
+
+.message img {
+    width: 40px;
 }
